X 0.3
    * Add left-click to read
    * Add autoRead option (default true) to control reading when item is selected in player's inventory slot

2012-01-26  0.2
    * Update for CraftBukkit 1.1-R1

2012-01-20  0.1 beta
    * Initial release
