@@ -1,7 +1,8 @@
 nextPaperID: -1
 paperLengthLineCap: 17
 consumeInk: false
-readOnSelect: true
+autoRead: true
+magicInkDecoder: dragon_egg
 writingImplements:
     - feather
     - stick
