@@ -3,5 +3,5 @@ CLASSPATH=../craftbukkit-1.1-R3.jar javac *.java -Xlint:unchecked -Xlint:depreca
 rm -rf me 
 mkdir -p me/exphc/Writable
 mv *.class me/exphc/Writable
-jar cf Writable.jar me/ *.yml README ChangeLog *.java
+jar cf Writable.jar me/ *.yml README.md ChangeLog *.java LICENSE
 cp Writable.jar ../plugins/
